--- a/Rfoof/Rfoof/View/ProductCell.xib
+++ b/Rfoof/Rfoof/View/ProductCell.xib
@@ -17,68 +17,107 @@
                 <rect key="frame" x="0.0" y="0.0" width="385" height="282"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DL-qP-oio">
-                        <rect key="frame" x="0.0" y="7.5" width="385" height="274"/>
-                    </imageView>
-                    <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="O97-Lc-DEg">
-                        <rect key="frame" x="0.0" y="143" width="385" height="128"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                    <stackView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="sX5-hP-urK">
+                        <rect key="frame" x="0.0" y="7" width="385" height="279"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h02-pM-BP6">
-                                <rect key="frame" x="8" y="13" width="58" height="53"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="oKv-Yl-UkV">
+                                <rect key="frame" x="0.0" y="0.0" width="385" height="151"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="gjI-Du-gEo">
+                                        <rect key="frame" x="0.0" y="0.0" width="385" height="151"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="book.circle.fill" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="5DL-qP-oio">
+                                                <rect key="frame" x="0.0" y="0.5" width="385" height="150"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="height" constant="151" id="Fty-dZ-zDd"/>
+                                                    <constraint firstAttribute="width" constant="385" id="LTD-yV-0TA"/>
+                                                </constraints>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                            </stackView>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="O97-Lc-DEg">
+                                <rect key="frame" x="0.0" y="151" width="385" height="128"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" spacing="25" translatesAutoresizingMaskIntoConstraints="NO" id="KwR-Sh-1bt">
+                                        <rect key="frame" x="8" y="23" width="361" height="93"/>
+                                        <subviews>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="bLH-Sl-bbm">
+                                                <rect key="frame" x="10" y="10" width="58" height="83"/>
+                                                <subviews>
+                                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="scribble" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="h02-pM-BP6">
+                                                        <rect key="frame" x="0.0" y="0.0" width="58" height="82"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="54" id="0MZ-XN-GqC"/>
+                                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="58" id="bDL-Bz-IOq"/>
+                                                            <constraint firstAttribute="width" constant="58" id="fTR-wu-Qt1"/>
+                                                        </constraints>
+                                                    </imageView>
+                                                </subviews>
+                                            </stackView>
+                                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="31" translatesAutoresizingMaskIntoConstraints="NO" id="XId-Kx-kKu">
+                                                <rect key="frame" x="78" y="10" width="273" height="83"/>
+                                                <subviews>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6B-7u-jih">
+                                                        <rect key="frame" x="0.0" y="0.0" width="273" height="26"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="width" constant="273" id="4jF-X9-x1S"/>
+                                                            <constraint firstAttribute="height" constant="26" id="O3k-Cv-G1Z"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Title" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpf-HN-sPT">
+                                                        <rect key="frame" x="0.0" y="57" width="273" height="26"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="26" id="Ure-W8-GhK"/>
+                                                            <constraint firstAttribute="width" constant="273" id="uba-AI-UgP"/>
+                                                        </constraints>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <nil key="textColor"/>
+                                                        <nil key="highlightedColor"/>
+                                                    </label>
+                                                </subviews>
+                                            </stackView>
+                                        </subviews>
+                                        <constraints>
+                                            <constraint firstItem="bLH-Sl-bbm" firstAttribute="top" secondItem="KwR-Sh-1bt" secondAttribute="top" constant="10" id="3lW-LW-McR"/>
+                                            <constraint firstItem="bLH-Sl-bbm" firstAttribute="leading" secondItem="KwR-Sh-1bt" secondAttribute="leading" constant="10" id="HEV-gO-ggd"/>
+                                            <constraint firstItem="XId-Kx-kKu" firstAttribute="leading" secondItem="bLH-Sl-bbm" secondAttribute="trailing" constant="10" id="MN8-FR-a77"/>
+                                            <constraint firstItem="XId-Kx-kKu" firstAttribute="top" secondItem="KwR-Sh-1bt" secondAttribute="top" constant="10" id="YhA-7g-X0V"/>
+                                            <constraint firstAttribute="trailing" secondItem="XId-Kx-kKu" secondAttribute="trailing" constant="10" id="dfS-xw-qWq"/>
+                                        </constraints>
+                                    </stackView>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray2Color"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="40" id="107-Xr-OW9"/>
-                                    <constraint firstAttribute="height" constant="40" id="wPP-ji-qeQ"/>
+                                    <constraint firstAttribute="height" constant="128" id="216-g9-mne"/>
+                                    <constraint firstItem="KwR-Sh-1bt" firstAttribute="leading" secondItem="O97-Lc-DEg" secondAttribute="leadingMargin" id="Thf-jZ-OK5"/>
+                                    <constraint firstAttribute="width" constant="385" id="hVl-Dw-xhp"/>
+                                    <constraint firstItem="KwR-Sh-1bt" firstAttribute="top" secondItem="O97-Lc-DEg" secondAttribute="top" constant="23" id="kX5-g1-DnI"/>
                                 </constraints>
-                            </imageView>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="E6B-7u-jih">
-                                <rect key="frame" x="92" y="13" width="82" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemPurpleColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="kpf-HN-sPT">
-                                <rect key="frame" x="244" y="13" width="82" height="21"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <color key="backgroundColor" systemColor="systemOrangeColor"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            </view>
                         </subviews>
-                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    </view>
+                    </stackView>
                 </subviews>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <constraints>
-                <constraint firstItem="5DL-qP-oio" firstAttribute="leading" secondItem="njF-e1-oar" secondAttribute="leading" id="4Fe-1T-ZRa"/>
-                <constraint firstItem="njF-e1-oar" firstAttribute="bottom" secondItem="5DL-qP-oio" secondAttribute="bottom" id="IQd-uQ-Gw3"/>
-                <constraint firstItem="5DL-qP-oio" firstAttribute="top" secondItem="njF-e1-oar" secondAttribute="top" constant="7" id="MGc-iA-rw3"/>
-                <constraint firstItem="njF-e1-oar" firstAttribute="trailing" secondItem="5DL-qP-oio" secondAttribute="trailing" id="YAa-df-EpM"/>
-            </constraints>
             <connections>
                 <outlet property="ProductImageView" destination="5DL-qP-oio" id="92M-rx-3cA"/>
                 <outlet property="ProductTitleLabel" destination="kpf-HN-sPT" id="D54-pC-Txx"/>
                 <outlet property="userImageView" destination="h02-pM-BP6" id="fyJ-8T-Ttw"/>
                 <outlet property="userNameLabel" destination="E6B-7u-jih" id="FIj-ms-bRK"/>
             </connections>
-            <point key="canvasLocation" x="181.8840579710145" y="0.0"/>
+            <point key="canvasLocation" x="150" y="-15.401785714285714"/>
         </tableViewCell>
     </objects>
     <resources>
         <image name="book.circle.fill" catalog="system" width="128" height="121"/>
         <image name="scribble" catalog="system" width="128" height="118"/>
-        <systemColor name="systemBackgroundColor">
-            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemOrangeColor">
-            <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </systemColor>
-        <systemColor name="systemPurpleColor">
-            <color red="0.68627450980392157" green="0.32156862745098042" blue="0.87058823529411766" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        <systemColor name="systemGray2Color">
+            <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
